# HeatMapAd

./: .gitignore  Infrastructure.py  ad.py  avito_crawller.py  cian_crawller.py  city.py  crawller.py  crawller_cian.py  data.txt  heatMapWork.py  jgj  links2.txt  main.py  mapRender.py  model_ad.py  model_location.py  parser.py  parser_avito.py  parser_cyan.py  parser_i.py  pyproject.toml  realEstate.py  streets.txt
bot/: apartments_bot.py  dialog_s_g.py  map.html
bot/dialogs/: ad_dialog_.py  admin_dialog_.py  filter_analytical_map_.py  filter_dialog_.py  filter_heat_map_dialog_.py  filter_infrastructure_objects_dialog_.py  filter_num_floor_dialog_.py  filter_price_dialog_.py  filter_repair_dialog_.py  filter_total_area_dialog_.py  filter_type_housing_.py  filter_type_map_dialog_.py  list_asd_dialog_.py  menu_city_dialog_.py  user_personal_area_dialog_.py
controller/: analytic_controller.py  download_controller.py  user_controller.py
crawller/: avito.py  cian.py  infrastructure_crawller.py  infrastucture.py
crawllers/: avito.py  base.py  cian.py  infrastucture.py
db/: ads.db  db_helper.py
db/db_users/: db_users_helper.py
mapService/: TestData.txt  heatMapWork.py  mainWebsite.py
model/: ad.py  description.py  infrastructure.py  location.py  real_estate.py
model/users/: favourites.py  history.py  tokens.py  user.py
models/: ad.py  description.py  infrastructure.py  location.py  real_estate.py
models/users/: favourites.py  (+3 more)
parser/: parser_avito.py  parser_cyan.py  parser_i.py
parsers/: avito.py  base.py  cian.py  infrastucture.py
web/: app.py
(+9 files in other folders)
