[tool.poetry]
name = "heatmapad"
version = "0.1.0"
description = ""
authors = ["Acer <smile.the.deep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
fake-useragent = "^1.1.3"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
